Sculpt vertex color and face sets don't work for me in 2.90.0 Alpha, branch: master, commit date: 2020-06-23 #78192

Closed
opened 2020-06-24 07:24:54 +02:00 by Steffen Hartmann · 6 comments

{F8640082}System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27016

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-23 21:54, hash: 49234c15e2
Worked: (newest version of Blender that worked as expected)

Short description of error
Using the new sculpt vertex paint and face set brush don't work. Sometimes it shows some very glitchy color artefacts. But most of the time no visible color when using the paint and face sets brush.

Exact steps for others to reproduce the error
Just open the new 2.90.0 Alpha, branch: master, commit date: 2020-06-23, go to sculpt mode and use the paint or face sets brush.

{[F8640082](https://archive.blender.org/developer/F8640082/2020-06-24_07-28-56.mp4)}**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27016 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-23 21:54, hash: `49234c15e2` Worked: (newest version of Blender that worked as expected) **Short description of error** Using the new sculpt vertex paint and face set brush don't work. Sometimes it shows some very glitchy color artefacts. But most of the time no visible color when using the paint and face sets brush. **Exact steps for others to reproduce the error** Just open the new 2.90.0 Alpha, branch: master, commit date: 2020-06-23, go to sculpt mode and use the paint or face sets brush.

Added subscriber: @Harti

Added subscriber: @Harti
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

#78188 (Sculpt mask painting provides heavy shading glitches (today regression)) is very much related.

CC @PabloDobarro

#78188 (Sculpt mask painting provides heavy shading glitches (today regression)) is very much related. CC @PabloDobarro

This issue was referenced by 0f7851ee79

This issue was referenced by 0f7851ee79bdcd39b475633b5f65c31aa5370a23
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-06-24 17:27:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78192
No description provided.